--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "license": "MIT",
   "homepage": "http://emlun.se/posts/2015-10-30-how-to-load-styles-from-npm-modules-using-webpack",
   "devDependencies": {
+    "css-loader": "^0.21.0",
     "jshint": "^2.8.0",
     "jshint-loader": "^0.8.3",
+    "node-sass": "^3.4.1",
+    "sass-loader": "^3.1.1",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   }
